# Enteprise-RAG

./: README.md  main.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/Ingestion/: chunker.py  metadata.py  parsers.py
backend/app/api/: generate_embedding.py  ingestion.py  query.py
backend/app/core/: schemas.py
backend/app/generation/: embedding.py
backend/app/retrieval/: documents.py  secure_retriever.py
backend/app/security/: rbac.py
frontend/src/: App.tsx
frontend/src/components/: query_request.tsx
