[project]
name = "enterprise-rag-application"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "authlib>=1.7.2",
    "chroma>=0.2.0",
    "elasticsearch>=9.4.0",
    "fastapi>=0.136.1",
    "langchain>=1.3.1",
    "langchain-cohere>=0.5.1",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langchain-pinecone>=0.2.13",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.1",
    "langsmith>=0.8.5",
    "opentelemetry-api>=1.42.1",
    "opentelemetry-sdk>=1.42.1",
    "pandas>=3.0.3",
    "pdfplumber>=0.11.9",
    "pinecone>=7.3.0",
    "prometheus-client>=0.25.0",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.1",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.29",
    "sentence-transformers>=5.5.1",
    "sqlalchemy>=2.0.49",
    "unstructured>=0.22.29",
    "uvicorn>=0.47.0",
]
